@@ -11,7 +11,7 @@ orderable: if true, the 'ordering' column is populated (again with links to wagt
 
 If either sortable or orderable is true, the following variables are also required:
 
-parent_page: The page instance currently being browsed (used to generate the correct wagtailadmin_explore urls)
+parent_page: The page instance currently being browsed (used to generate the correct wagtailadmin_explore urls and title text)
 ordering: the current sort parameter
 
 {% endcomment %}
@@ -34,30 +34,30 @@ ordering: the current sort parameter
     {% endif %}
     <th class="title">
         {% trans 'Title' as title_label %}
-        {% table_header_label label=title_label sortable=sortable sort_field='title' %}
+        {% page_table_header_label label=title_label sortable=sortable sort_field='title' parent_page_title=parent_page.title %}
     </th>
     {% if show_parent %}
         <th class="parent">
             {% trans 'Parent' as parent_label %}
-            {% table_header_label label=parent_label sortable=0 %}
+            {% page_table_header_label label=parent_label sortable=0 parent_page_title=parent_page.title %}
         </th>
     {% endif %}
      <th class="updated">
         {% trans 'Updated' as updated_label %}
-        {% table_header_label label=updated_label sortable=sortable sort_field='latest_revision_created_at' %}
+        {% page_table_header_label label=updated_label sortable=sortable sort_field='latest_revision_created_at' parent_page_title=parent_page.title %}
     </th>
     <th class="type">
         {% trans 'Type' as type_label %}
 
         {% if sortable and sortable_by_type %}
-            {% table_header_label label=type_label sortable=1 sort_field='content_type' %}
+            {% page_table_header_label label=type_label sortable=1 sort_field='content_type' parent_page_title=parent_page.title %}
         {% else %}
-            {% table_header_label label=type_label sortable=0 %}
+            {% page_table_header_label label=type_label sortable=0 parent_page_title=parent_page.title %}
         {% endif %}
     </th>
     <th class="status">
         {% trans 'Status' as status_label %}
-        {% table_header_label label=status_label sortable=sortable sort_field='live' %}
+        {% page_table_header_label label=status_label sortable=sortable sort_field='live' parent_page_title=parent_page.title %}
     </th>
     <th></th>
 </tr>
